# aicup2019

./: .gitignore  CMakeLists.txt  MyStrategy.cpp  MyStrategy.hpp  README.md  Simulation.cpp  Simulation.hpp  StrategyGenerator.cpp  StrategyGenerator.hpp  Util.cpp  Util.hpp  archive.sh  batch_run.py  config.json  main.cpp  run_batch.sh
model/: Bullet.cpp  Bullet.hpp  JumpState.cpp  Unit.cpp  Unit.hpp  UnitAction.cpp  Vec2Double.cpp  Weapon.cpp  Weapon.hpp
